--- a/_posts/2023-02-04-CL0.md
+++ b/_posts/2023-02-04-CL0.md
@@ -6,8 +6,8 @@ tags: C语言 C标准库
 color: rgb(255,210,32)
 toc: true
 ---
-
-# stdio.h
+{:toc}
+# <cstdio> (stdio.h)
 
 头文件<stdio.h>定义了用于输入和输出的函数、类型和宏
 
