--- a/_posts/2023-02-04-搭建一个这样的博客.md
+++ b/_posts/2023-02-04-搭建一个这样的博客.md
@@ -5,6 +5,7 @@ date:   2023-02-04 16:15:21 +0800
 tags: blog fun
 color: rgb(205,20,0)
 toc: true
+subtitle: '有趣的玩意'
 ---
 
 ## 借助 github pages 搭建博客
