--- a/_posts/2023-02-04-搭建一个这样的博客.md
+++ b/_posts/2023-02-04-搭建一个这样的博客.md
@@ -36,28 +36,12 @@ subtitle: '有趣的玩意'
 
 2 在需要使用 toc 功能的页面模板(md文件)的 content 前面加上 `toc: true`
 
-3 将 [post.html](https://github.com/westqzy/westqzy.github.io/blob/main/_layouts/post.html)(通常在 _layouts 内) 处原先的 `<div class="contents">` 替换为`<textarea>`和`</textarea>`中间的内容：
-
-<textarea>
-    {% if page.toc==true %}
-      <div class="container">  
-        <div class="contents">  
-            {{ page.content }}
-        </div>   
-        <div class="table-of-contents">
-          <aa>Contents</aa>
-          {% include toc.html html=content %}
-        </div>
-      </div>
-    {% else %}
-    {{ page.content }}
-    {% endif %}
-</textarea>
+3 将 [post.html](https://github.com/westqzy/westqzy.github.io/blob/main/_layouts/post.html)(通常在 _layouts 内) 处原先的 `<div class="contents">` 替换为[该文件](https://github.com/westqzy/westqzy.github.io/blob/_post/modify.html)中的内容
 
 
-注：不知道为啥，使用 markdown 引用html代码，结果还是被解析了。所以只能用textarea标签包裹内容
+注：不知道为啥，使用 markdown 引用html代码，结果还是被解析了。所以只能用放在别的文件里然后超链接的方式
 
-4 在 [style.css]([/assets/css/style.css](https://github.com/westqzy/westqzy.github.io/blob/main/assets/css/style.css))(通常在 assets 内)中添加：
+4 在 [style.css](https://github.com/westqzy/westqzy.github.io/blob/main/assets/css/style.css)(通常在 assets 内)中添加：
 
 ```css
     .container {
