--- a/_posts/2023-02-04-搭建一个这样的博客.md
+++ b/_posts/2023-02-04-搭建一个这样的博客.md
@@ -100,10 +100,34 @@ subtitle: '有趣的玩意'
         }
     ```
 
-    以上采用 sticky 的 position 方案，使得目录内容块随着内容滑动而改变 position。[参考自](https://cloud.tencent.com/developer/article/2143034)
+    以上采用 sticky 的 position 方案，使得目录内容块随着内容滑动而改变 position。[参考自该博客](https://cloud.tencent.com/developer/article/2143034)
 
     里面的参数不做赘述，可以根据你自己的页面布局做适当的调整
 
     **tips**:可以通过[这个网站](https://www.sassmeister.com/)将 scss/cass 转为css
 
-#### 网易云
+#### 网易云插件
+
+具体步骤如下：
+
+1. 在_include目录下创建[cloud-music.html](https://github.com/westqzy/westqzy.github.io/blob/main/_includes/cloud-music.html)，具体代码如下:
+
+    ```html
+        <!-- cloud music -->
+        <!-- auto=1 可以控制自动播放与否，当值为 1 即打开网页就自动播放，值为 0 时需要访客手动点击播放 -->
+        <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86
+                src="//music.163.com/outchain/player?type=2&id={{ page.music-id }}&auto=1&height=66">
+        </iframe>
+    ```
+
+2. 将整个`cloud-music.html`嵌入[post.html](https://github.com/westqzy/westqzy.github.io/blob/main/_layouts/post.html)，具体位置可以放在正文开头
+
+    ```html
+        <!-- 在正文开头添加网易云音乐插件 -->
+        {% if page.music-id %}
+            {% include cloud-music.html %}
+        {% endif %} 
+    ```
+
+3. 在需要添加音乐的md文件开头的配置项添加music-id: *****
+    可参考[此例子](https://music.163.com/#/outchain/2/422790454/)查看如何获取 music-id
