--- a/_posts/2023-02-04-搭建一个这样的博客.md
+++ b/_posts/2023-02-04-搭建一个这样的博客.md
@@ -37,7 +37,7 @@ music-id: 422790454
 
 2. 在需要使用 toc 功能的页面模板(md文件)的 content 前面加上 `toc: true`
 
-3. 将 [post.html](https://github.com/westqzy/westqzy.github.io/blob/main/_layouts/post.html)(通常在 _layouts 内) 处原先的 `<div class="contents">` 替换为[该文件](https://github.com/westqzy/westqzy.github.io/blob/main/_posts/modify.html)中的内容
+3. 将 [post.html](https://github.com/westqzy/westqzy.github.io/blob/main/_layouts/post.html)(通常在 _layouts 内) 处原先的 `<div class="contents">` 替换为[该文件](https://github.com/westqzy/westqzy.github.io/blob/main/_posts/modify.md)中的内容
 **注**：不知道为啥，使用 markdown 引用html代码，结果还是被解析了。所以只能用放在别的文件里然后超链接的方式
 
 4. 在 [style.css](https://github.com/westqzy/westqzy.github.io/blob/main/assets/css/style.css)(通常在 assets 内)中添加：
@@ -121,14 +121,10 @@ music-id: 422790454
         </iframe>
     ```
 
-2. 将整个`cloud-music.html`嵌入[post.html](https://github.com/westqzy/westqzy.github.io/blob/main/_layouts/post.html)，具体位置可以放在正文开头
+2. 将整个`cloud-music.html`嵌入[post.html](https://github.com/westqzy/westqzy.github.io/blob/main/_layouts/post.html)，具体位置可以放在文件开头
 
-    ```html
-        <!-- 在正文开头添加网易云音乐插件 -->
-        {% if page.music-id %}
-            {% include cloud-music.html %}
-        {% endif %} 
-    ```
+    嵌入代码可见[这里](https://github.com/westqzy/westqzy.github.io/blob/main/_posts/modify_wangyiyun.md)中的内容
+
 
 3. 在需要添加音乐的md文件开头的配置项添加music-id: *****
     可参考[此例子](https://music.163.com/#/outchain/2/422790454/)查看如何获取 music-id
