--- a/_posts/2023-02-04-搭建一个这样的博客.md
+++ b/_posts/2023-02-04-搭建一个这样的博客.md
@@ -116,6 +116,7 @@ music-id: 422790454
     ```html
         <!-- cloud music -->
         <!-- auto=1 可以控制自动播放与否，当值为 1 即打开网页就自动播放，值为 0 时需要访客手动点击播放 -->
+        <!-- 此处不知道为啥设置 1 后打开网页无法自动播放 -->
         <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86
                 src="//music.163.com/outchain/player?type=2&id={{ page.music-id }}&auto=1&height=66">
         </iframe>
@@ -126,5 +127,5 @@ music-id: 422790454
     嵌入代码可见[这里](https://github.com/westqzy/westqzy.github.io/blob/main/_posts/modify_wangyiyun.md)中的内容
 
 
-3. 在需要添加音乐的md文件开头的配置项添加music-id: *****
+3. 在需要添加音乐的md文件开头的配置项添加music-id: *****。
     可参考[此例子](https://music.163.com/#/outchain/2/422790454/)查看如何获取 music-id
