--- a/_posts/2023-02-04-搭建一个这样的博客.md
+++ b/_posts/2023-02-04-搭建一个这样的博客.md
@@ -43,62 +43,71 @@ music-id: 422790454
 4. 在 [style.css](https://github.com/westqzy/westqzy.github.io/blob/main/assets/css/style.css)(通常在 assets 内)中添加：
 
     ```css
-        .container {
-        width: 1060px;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: row;
-        }
-        .container .contents {
-        width: 740px;
-        }
-        .container .table-of-contents {
-        padding: 0px;
-        border-left: 2px solid #efefef;
-        width: 280px;
-        position: -webkit-sticky;
-        position: sticky;
-        top: 80px;
-        margin-bottom: 80px;
-        height: fit-content;
-        margin-left: 40px;
-        }
+.container {
+  display: block;
+  width: 1060px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+}
+.container .contents {
+  display: block;
+  width: 740px;
+}
+.container .table-of-contents {
+  display: block;
+  padding: 0px;
+  border-left: 2px solid #efefef;
+  width: 280px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 80px;
+  margin-bottom: 80px;
+  height: fit-content;
+  margin-left: 40px;
+}
 
-        .container .table-of-contents aa {
-        font-family: fantasy;
-        font-size: 24px;
-        color: hsla(38, 100%, 49%, 0.718);
-        }
-        .container .table-of-contents ul {
-        list-style: none;
-        padding-left: 0;
-        margin-left: 25px;
-        list-style-type: revert; 
-        font-size: 18px;
-        line-height: 24px;
-        color: #ff0505;
-        }
-        .container .table-of-contents ul a {
-        color: #15c7fd;
-        }
-        .container .table-of-contents ul a:hover {
-        color: #24fff4;
-        text-decoration: underline;
-        }
+.container .table-of-contents aa {
+  display: block;
+  font-family: fantasy;
+  font-size: 24px;
+  color: hsla(38, 100%, 49%, 0.718);
+}
+.container .table-of-contents ul {
+  display: block;
+  list-style: none;
+  padding-left: 0;
+  margin-left: 25px;
+  list-style-type: revert; 
+  font-size: 18px;
+  line-height: 24px;
+  color: #ff0505;
+}
+.container .table-of-contents ul a {
+  display: block;
+  color: #15c7fd;
+}
+.container .table-of-contents ul a:hover {
+  display: block;
+  color: #24fff4;
+  text-decoration: underline;
+}
 
-        @media screen and (max-width: 1060px) {
-        .post-content .container {
-            width: 100%;
-        }
-        .post-content .container .contents {
-            width: 100%;
-            float: none;
-            margin: 0 auto;
-        }
-        .post-content .container .table-of-contents {
-            display: none;
-        }
-        }
+@media screen and (max-width: 1060px) {
+  .post-content .container {
+    display: block;
+    width: 100%;
+  }
+  .post-content .container .contents {
+    display: block;
+    width: 100%;
+    float: none;
+    margin: 0 auto;
+  }
+  .post-content .container .table-of-contents {
+    display: block;
+    display: none;
+  }
     ```
 
     以上采用 sticky 的 position 方案，使得目录内容块随着内容滑动而改变 position。[参考自该博客](https://cloud.tencent.com/developer/article/2143034)
