--- a/_posts/2023-02-04-C语言官方库学习stdio.md
+++ b/_posts/2023-02-04-C语言官方库学习stdio.md
@@ -283,3 +283,19 @@ int main()
     return 0;
 }
 ```
+
+#### freopen
+
+```c
+FILE * freopen ( const char * filename, const char * mode, FILE * stream );
+```
+
+**功能**
+
+把一个新的文件名 filename 与给定的打开的流 stream 关联，同时关闭流中的旧文件
+
+**参数**
+
+**返回值**
+
+**实例**
