--- a/_posts/2023-02-04-C语言官方库学习stdio.md
+++ b/_posts/2023-02-04-C语言官方库学习stdio.md
@@ -328,3 +328,35 @@ void setbuf ( FILE * stream, char * buffer );
 
 **功能**
 
+定义流 stream 应如何缓冲。该函数应在与流 stream 相关的文件被打开时，且还未发生任何输入或输出操作之前被调用一次。
+
+**参数**
+
+| stream | 指向 FILE 对象的指针，该 FILE 对象标识了一个打开的流
+| buffer | 分配给用户的缓冲，它的长度至少为 BUFSIZ 字节，BUFSIZ 是一个宏常量，表示数组的长度
+
+**返回值**
+
+无
+
+**实例**
+
+```c
+#include <stdio.h>
+int main()
+{
+   char buf[BUFSIZ];
+   setbuf(stdout, buf);
+   puts("This is runoob");
+   fflush(stdout);
+   return(0);
+}
+```
+
+#### fflush
+
+```c
+int fflush ( FILE * stream );
+```
+
+**功能**
