--- a/_posts/2023-02-04-C语言官方库学习stdio.md
+++ b/_posts/2023-02-04-C语言官方库学习stdio.md
@@ -481,3 +481,16 @@ int main()
     return(0);
 }
 ```
+
+#### fseek
+
+```c
+int fseek ( FILE * stream, long int offset, int origin );
+```
+
+**功能**
+
+设置流 stream 的文件位置为给定的偏移 offset
+
+**参数**
+
