--- a/_posts/2023-02-14-CPP学习stl库1.md
+++ b/_posts/2023-02-14-CPP学习stl库1.md
@@ -88,3 +88,41 @@ subtitle: '学习总结'
     }
 ```
 
+### 遍历 map
+
+1. 迭代器
+
+```c
+    map<string, int> mp;
+    mp["张三"] = 20;
+    mp["李四"] = 18;
+    mp["王五"] = 30;
+    for (auto it = mp.begin(); it != mp.end(); it++) {
+        cout << it->first << " " << it->second << endl;
+    }
+```
+
+2. C++11 
+
+```c
+    map<string, int> mp;
+    mp["张三"] = 20;
+    mp["李四"] = 18;
+    mp["王五"] = 30;
+    for (auto it: mp) {
+        cout << it.first << " " << it.second << endl;
+    }
+```
+
+3. C++17
+
+```c
+    map<string, int> mp;
+    mp["张三"] = 20;
+    mp["李四"] = 18;
+    mp["王五"] = 30;
+    for (auto [key
+    , val] : mp) {
+        cout << key  << " " << val << endl;
+    }
+```
